improving .travis.yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
-language: java
-
+dist: xenial
+language: python
 sudo: required
-
-jdk:
-        - oraceljdk8
-        - oraclejdk11
-        - openjdk10
-        - openjdk11
-
+python:
+  - '3.7'
+  - '3.6'
+  - '3.5'
+  - '3.4'
+  - '2.7'
 before_install: pip3 install spotdl
+script: python3 spotpl.py
